# blog

./: .gitignore
axum-blog/: .gitignore  Cargo.toml
axum-blog/src/: db.rs  main.rs  test.rs
axum-blog/src/controller/: account.rs  login.rs
axum-blog/src/entity/: account.rs  users.rs
axum-blog/src/model/: request.rs  response.rs
axum-blog/src/utils/: jwt.rs  mod.rs  myerror.rs
blog-api/: .env  .gitignore  Cargo.toml  pom.xml  readme.md
blog-api/src/: constants.rs  database.rs  entity.rs  error.rs  errors.rs  handler.rs  main.rs  model.rs  models.rs  repo.rs  repositories.rs  router.rs  routes.rs  service.rs  utils.rs
blog-api/src/controller/: user_controller.rs
blog-api/src/entity/: friend.rs  result.rs  site_config.rs  tag.rs  user.rs
blog-api/src/errors/: app_error.rs  auth_error.rs
blog-api/src/handler/: friend_handler.rs  site_handler.rs  user_handler.rs
blog-api/src/main/java/com/huang/: BlogApiApplication.java
blog-api/src/main/java/com/huang/annotation/: AccessLimit.java  OptLogger.java  VisitLogger.java
blog-api/src/main/java/com/huang/config/: MyMetaObjectHandler.java  RedisConfig.java  WebConfig.java  WebMvcConfig.java
blog-api/src/main/java/com/huang/constant/: CommonConstant.java  RedisConstant.java
blog-api/src/main/java/com/huang/constants/: CommonConstant.java  OptTypeConstant.java  PageConstant.java  RedisConstant.java
blog-api/src/main/java/com/huang/contants/: CommonConstant.java
blog-api/src/main/java/com/huang/controller/: AlbumController.java  FriendController.java  LoginController.java  SiteConfigController.java  TalkController.java  UserController.java
blog-api/src/main/java/com/huang/entity/: Album.java  BlogFile.java  Comment.java  Friend.java  Menu.java  Photo.java  Role.java  SiteConfig.java  Talk.java  User.java
blog-api/src/main/java/com/huang/enums/: ArticleStatusEnum.java  CommentTypeEnum.java  FilePathEnum.java  LikeTypeEnum.java  StatusCodeEnum.java  UploadModeEnum.java  ZoneEnum.java
blog-api/src/main/java/com/huang/exception/: ServiceException.java
blog-api/src/main/java/com/huang/handler/: GlobalExceptionHandler.java  MyMetaObjectHandler.java
blog-api/src/main/java/com/huang/mapper/: AlbumMapper.java  BlogFileMapper.java  CommentMapper.java  FriendMapper.java  MenuMapper.java  PhotoMapper.java  RoleMapper.java  SiteConfigMapper.java  TalkMapper.java  UserMapper.java
blog-api/src/main/java/com/huang/model/: PageResult.java  Result.java
blog-api/src/main/java/com/huang/satoken/: MySaTokenListener.java  SaTokenConfig.java  StpInterfaceImpl.java
blog-api/src/main/java/com/huang/service/: AlbumService.java  BlogFileService.java  FriendService.java  (+4 more)
blog-api/src/main/resources/: application.properties  application.yml
blog-api/src/main/resources/mapper/: AlbumMapper.xml  CommentMapper.xml  FriendMapper.xml  MenuMapper.xml  RoleMapper.xml  TalkMapper.xml
blog-api/src/model/: app_result.rs  request.rs  response.rs  user.rs
blog-api/src/models/: api_result.rs  error.rs  request.rs  response.rs
blog-api/src/models/request/: login_request.rs
blog-api/src/repo/: friend_repo.rs  menu_repo.rs  role_repo.rs  site_repo.rs  tag_repo.rs  user_repo.rs
blog-api/src/repositories/: user_repo.rs
blog-api/src/routes/: user_router.rs
blog-api/src/service/: friend_service.rs  redis_service.rs  site_service.rs  tag_service.rs  user_service.rs
blog-api/src/services/: user_service.rs
blog-api/src/utils/: file.rs  jwt.rs  password.rs  tools.rs
(+198 files in other folders)
