[package]
name = "axum-blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
bcrypt = "0.17.0"
chrono = "0.4.41"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres"] }
tokio = { version = "1.47.0", features = ["full"] }
tracing-subscriber = "0.3.19"
uuid = "1.17.0"
