[package]
name = "axum-blog"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = {version = "0.4.41", features = ["serde"]}
dotenvy = "0.15.7"
log = "0.4.27"
sea-orm = {version = "1.1.14",features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"]}
serde = "1.0.219"
serde_json = "1.0.142"
tokio = {version = "1.47.1", features = ["full"]}
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.19",features = ["env-filter"]}
