[package]
name = "blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.43",features = ["serde"] }
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8.6",features = ["runtime-tokio","tls-native-tls","postgres","macros","chrono"] }
time = {version =  "0.3.47",features = ["macros"] }
tokio = { version = "1.49.0",features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "local-time"] }
