[package]
name = "blog-api"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = "0.8.8"
chrono = { version = "0.4.43",features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = { version = "10.3.0",features = ["rust_crypto"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlx = { version = "0.8.6",features = ["runtime-tokio","tls-native-tls","postgres","macros","chrono"] }
thiserror = "2.0.18"
time = {version =  "0.3.47",features = ["macros"] }
tokio = { version = "1.49.0",features = ["rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "local-time"] }
